p3-ast-javacc/VNM.java
/* VNM.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. VNM.java */
public class VNM/*@bgen(jjtree)*/implements VNMTreeConstants, VNMConstants {/*@bgen(jjtree)*/
  protected static JJTVNMState jjtree = new JJTVNMState();

// ==================================================
//                  PARSER BEGINS
// ==================================================
  static final public 
SimpleNode start() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case LRND:
    case LSQU:
    case WHILE:
    case FOR:
    case IF:
    case FUNCTION:
    case RETURN:
    case PRINT:
    case PRINTLN:
    case VAR:
    case NUMBER:
    case IDNUM:
    case IDBOOL:
    case IDVEC:{
      S();
{if ("" != null) return (SimpleNode) (jjtree.popNode());}
      break;
      }
    case 0:{
      jj_consume_token(0);
{if (true) throw new ParseException("End of File.");}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public void S() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHILE:
    case FOR:
    case IF:
    case FUNCTION:
    case RETURN:
    case PRINT:
    case PRINTLN:
    case VAR:{
      statement_LL1();
      jj_consume_token(SCOL);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(2147483647)) {
        assign_stat();
        jj_consume_token(SCOL);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:
        case LRND:
        case LSQU:
        case NUMBER:
        case IDNUM:
        case IDVEC:{
          expression();
          jj_consume_token(SCOL);
          break;
          }
        case IDBOOL:{
          boolean_call();
          jj_consume_token(SCOL);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

// Helper productions marked #void to simplify the tree
  static final public void statement_LL1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      var_decl();
      break;
      }
    case FUNCTION:{
      fn_decl();
      break;
      }
    case RETURN:{
      return_stat();
      break;
      }
    case PRINT:{
      print_stat();
      break;
      }
    case PRINTLN:{
      println_stat();
      break;
      }
    case IF:{
      if_stat();
      break;
      }
    case FOR:{
      for_stat();
      break;
      }
    case WHILE:{
      while_stat();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHILE:
    case FOR:
    case IF:
    case FUNCTION:
    case RETURN:
    case PRINT:
    case PRINTLN:
    case VAR:{
      statement_LL1();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_2(2)) {
        fn_call();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDNUM:
        case IDBOOL:
        case IDVEC:{
          assign_stat();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

  static final public void body() throws ParseException {/*@bgen(jjtree) body */
  ASTbody jjtn000 = new ASTbody(JJTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case WHILE:
        case FOR:
        case IF:
        case FUNCTION:
        case RETURN:
        case PRINT:
        case PRINTLN:
        case VAR:
        case IDNUM:
        case IDBOOL:
        case IDVEC:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_1;
        }
        statement();
        jj_consume_token(SCOL);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void clause() throws ParseException {/*@bgen(jjtree) clause */
  ASTclause jjtn000 = new ASTclause(JJTCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        statement();
        jj_consume_token(SCOL);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case WHILE:
        case FOR:
        case IF:
        case FUNCTION:
        case RETURN:
        case PRINT:
        case PRINTLN:
        case VAR:
        case IDNUM:
        case IDBOOL:
        case IDVEC:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

//--------------------------- DECLARATIONS ------------------------------------------------

// AST: Flattens the list so identifiers are direct children of var_decl
  static final public void var_decl() throws ParseException {/*@bgen(jjtree) var_decl */
  ASTvar_decl jjtn000 = new ASTvar_decl(JJTVAR_DECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VAR);
      identifier();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        identifier();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

// AST: Calls ident_list to create a nested node for functions
  static final public void fn_decl() throws ParseException {/*@bgen(jjtree) fn_decl */
  ASTfn_decl jjtn000 = new ASTfn_decl(JJTFN_DECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUNCTION);
      identifier();
      jj_consume_token(LRND);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDNUM:
      case IDBOOL:
      case IDVEC:{
        ident_list();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(RRND);
      body();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

// AST: Explicit node for function parameter lists
  static final public void ident_list() throws ParseException {/*@bgen(jjtree) ident_list */
  ASTident_list jjtn000 = new ASTident_list(JJTIDENT_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      identifier();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        identifier();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

//--------------------------- FUNCTION CALLS AND RETURNS ----------------------------------
  static final public 
void fn_call() throws ParseException {/*@bgen(jjtree) fn_call */
  ASTfn_call jjtn000 = new ASTfn_call(JJTFN_CALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDNUM:{
        jj_consume_token(IDNUM);
ASTidnum jjtn001 = new ASTidnum(JJTIDNUM);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
        try {
jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;
jjtn001.jjtSetValue(token.image);
        } finally {
if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
        }
        jj_consume_token(LRND);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:
        case LRND:
        case LSQU:
        case NUMBER:
        case IDNUM:
        case IDVEC:{
          exp_list();
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        jj_consume_token(RRND);
        break;
        }
      case IDVEC:{
        jj_consume_token(IDVEC);
ASTidvec jjtn002 = new ASTidvec(JJTIDVEC);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
        try {
jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;
jjtn002.jjtSetValue(token.image);
        } finally {
if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
        }
        jj_consume_token(LRND);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:
        case LRND:
        case LSQU:
        case NUMBER:
        case IDNUM:
        case IDVEC:{
          exp_list();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(RRND);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void boolean_call() throws ParseException {/*@bgen(jjtree) boolean_call */
  ASTboolean_call jjtn000 = new ASTboolean_call(JJTBOOLEAN_CALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDBOOL);
ASTidbool jjtn001 = new ASTidbool(JJTIDBOOL);
             boolean jjtc001 = true;
             jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
             jjtc001 = false;
jjtn001.jjtSetValue(token.image);
      } finally {
if (jjtc001) {
               jjtree.closeNodeScope(jjtn001, true);
             }
      }
      jj_consume_token(LRND);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case LRND:
      case LSQU:
      case NUMBER:
      case IDNUM:
      case IDVEC:{
        exp_list();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(RRND);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void exp_list() throws ParseException {/*@bgen(jjtree) exp_list */
  ASTexp_list jjtn000 = new ASTexp_list(JJTEXP_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      expression();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        expression();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void condition_list() throws ParseException {/*@bgen(jjtree) condition_list */
  ASTcondition_list jjtn000 = new ASTcondition_list(JJTCONDITION_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      condition();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        condition();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void return_stat() throws ParseException {/*@bgen(jjtree) Return */
  ASTReturn jjtn000 = new ASTReturn(JJTRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      returnval();
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void returnval() throws ParseException {
    if (jj_2_3(2147483647)) {
      condition();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case LRND:
      case LSQU:
      case NUMBER:
      case IDNUM:
      case IDVEC:{
        expression();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void print_stat() throws ParseException {/*@bgen(jjtree) Print */
  ASTPrint jjtn000 = new ASTPrint(JJTPRINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINT);
      print_list();
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void println_stat() throws ParseException {/*@bgen(jjtree) Print_ln */
  ASTPrint_ln jjtn000 = new ASTPrint_ln(JJTPRINT_LN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINTLN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case LRND:
      case LSQU:
      case STRING:
      case NUMBER:
      case IDNUM:
      case IDBOOL:
      case IDVEC:{
        print_list();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void print_list() throws ParseException {
    printable();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMA);
      printable();
    }
}

  static final public void printable() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case LRND:
    case LSQU:
    case NUMBER:
    case IDNUM:
    case IDVEC:{
      expression();
      break;
      }
    case STRING:{
      jj_consume_token(STRING);
ASTstring jjtn001 = new ASTstring(JJTSTRING);
             boolean jjtc001 = true;
             jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
             jjtc001 = false;
// Strip quotes from string before storing
      jjtn001.jjtSetValue(token.image.substring(1, token.image.length()-1));
      } finally {
if (jjtc001) {
               jjtree.closeNodeScope(jjtn001, true);
             }
      }
      break;
      }
    case IDBOOL:{
      jj_consume_token(IDBOOL);
ASTidbool jjtn002 = new ASTidbool(JJTIDBOOL);
             boolean jjtc002 = true;
             jjtree.openNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
             jjtc002 = false;
jjtn002.jjtSetValue(token.image);
      } finally {
if (jjtc002) {
               jjtree.closeNodeScope(jjtn002, true);
             }
      }
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void assign_stat() throws ParseException {/*@bgen(jjtree) Assign */
  ASTAssign jjtn000 = new ASTAssign(JJTASSIGN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDNUM:{
        jj_consume_token(IDNUM);
ASTidnum jjtn001 = new ASTidnum(JJTIDNUM);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
        try {
jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;
jjtn001.jjtSetValue(token.image);
        } finally {
if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
        }
        jj_consume_token(ASSGN);
        expression();
        break;
        }
      case IDBOOL:{
        jj_consume_token(IDBOOL);
ASTidbool jjtn002 = new ASTidbool(JJTIDBOOL);
             boolean jjtc002 = true;
             jjtree.openNodeScope(jjtn002);
        try {
jjtree.closeNodeScope(jjtn002, true);
             jjtc002 = false;
jjtn002.jjtSetValue(token.image);
        } finally {
if (jjtc002) {
               jjtree.closeNodeScope(jjtn002, true);
             }
        }
        jj_consume_token(ASSGN);
        condition();
        break;
        }
      case IDVEC:{
        jj_consume_token(IDVEC);
ASTidvec jjtn003 = new ASTidvec(JJTIDVEC);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
        try {
jjtree.closeNodeScope(jjtn003, true);
            jjtc003 = false;
jjtn003.jjtSetValue(token.image);
        } finally {
if (jjtc003) {
              jjtree.closeNodeScope(jjtn003, true);
            }
        }
        jj_consume_token(ASSGN);
        vec_const();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void if_stat() throws ParseException {/*@bgen(jjtree) If */
  ASTIf jjtn000 = new ASTIf(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      condition();
      jj_consume_token(THEN);
      clause();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELIF:
        case ELSE:
        case FI:{
          ;
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          break label_8;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELSE:{
          jj_consume_token(ELSE);
          clause();
          jj_consume_token(FI);
          break;
          }
        case FI:{
ASTNULL jjtn001 = new ASTNULL(JJTNULL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
          try {
            jj_consume_token(FI);
          } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
          }
          break;
          }
        case ELIF:{
          if_recursion();
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}
